视频兼容处理
